Благодаря ретраям, получен способ обойти ограничение на символы в секунду